# vacuscan

./: READ.me  joblist.txt
vacuscan_bringup/: CMakeLists.txt  package.xml
vacuscan_bringup/config/: waypoints.yaml  waypoints_old.yaml
vacuscan_bringup/launch/: vacuscan_bringup.launch.py
vacuscan_bringup/rviz/: vacuscan.rviz
vacuscan_control/: package.xml  setup.cfg  setup.py
vacuscan_control/vacuscan_control/: capture_controller.py  vacuum_controller.py  wafer_controller.py  waypoint_runner.py  wire_length_publisher.py
vacuscan_description/: CMakeLists.txt  package.xml
vacuscan_description/config/: controller_position.yaml
vacuscan_description/launch/: control.launch.py  urdf_visualize.launch.py  urdf_visualize_meshes_collisions_inertias.launch.py
vacuscan_description/meshes/: down_base.stl  down_base_meter_180.stl  loader.stl  upper_base.stl
vacuscan_description/rviz/: simple.rviz
vacuscan_description/urdf/: converted_vacuscan.urdf  vacuscan.urdf  vacuscan.xacro  vacuscan_gazebo.urdf
vacuscan_gazebo/: CMakeLists.txt  package.xml
vacuscan_gazebo/launch/: sim.launch.py  spawn_robot_description.launch.py  spawn_robot_ros2.launch.xml  start_world.launch.py
vacuscan_gazebo/scripts/: x_move.py  y_move.py
vacuscan_gazebo/worlds/: vacuscan_table.world
vacuscan_interfaces/: CMakeLists.txt  package.xml
vacuscan_interfaces/srv/: RunWaypoints.srv  WaferGoto.srv
vacuscan_webui/: package.xml  setup.cfg  setup.py
vacuscan_webui/web/: app.js  index.html  index_wirelength_works.html  main.js  waypoints.yaml
wafer_map_tools/: make_wafer_map.py  make_waypoints_from_grid.py  wafer_grid.txt  wafer_grid_live_tuner.py  wafer_image_to_grid.py  wafermap_to_waypoints.py  waypoints.csv  waypoints.yaml  waypoints_from_grid.yaml
wafer_map_tools/out_live/: E5CA_grid.txt  E5CA_params.txt  E5CA_waypoints.csv  E5CA_waypoints.yaml
wafer_map_tools/output/: waypoints.yaml
wafer_stage_bringup/: package.xml  setup.cfg  setup.py
wafer_stage_bringup/config/: waypoints.yaml
wafer_stage_bringup/launch/: wafer_stage_bringup.launch.py  webui.launch.py
wafer_stage_bringup/resource/: wafer_stage_bringup
wafer_stage_bringup/rviz/: wafer_stage.rviz
wafer_stage_control/: package.xml  setup.cfg  setup.py
wafer_stage_control/resource/: wafer_stage_control
wafer_stage_control/wafer_stage_control/: wafer_controller.py  wafer_joint_broadcaster.py  wafer_wire_visualizer.py  waypoint_runner.py
wafer_stage_description/: CMakeLists.txt  package.xml
wafer_stage_description/launch/: urdf_visualize.launch.py
wafer_stage_description/meshes/: frame_vacuscan.stl
wafer_stage_description/urdf/: wafer_stage.urdf.xacro  wafer_stage_simple.urdf
wafer_stage_gazebo/: CMakeLists.txt  package.xml
wafer_stage_gazebo/config/: ros2_control.yaml
wafer_stage_gazebo/launch/: sim.launch.py
wafer_stage_gazebo/worlds/: empty.world
wafer_stage_interfaces/: CMakeLists.txt  package.xml
wafer_stage_webui/: package.xml  setup.cfg  setup.py
wafer_stage_webui/web/: app.js  index.html  index_one.html
