<?xml version="1.0"?>
<package format="3">
  <name>wafer_stage_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for wafer stage</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>wafer_stage_control</exec_depend>
  <exec_depend>wafer_stage_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
