<?xml version="1.0"?>
<package format="3">
  <name>wafer_stage_interfaces</name>
  <version>0.0.1</version>
  <description>Interfaces for wafer stage</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->
  </export>
</package>
